fix(auth): Update url allow list